package strategy;

public class MuteQuack implements QuackBehavior {
    @Override
    public void quack() {

    }
}
