package strategy;

public class Squeak implements QuackBehavior {
    @Override
    public void quack() {

    }
}
